# mt5-trading-bot

./: .env.example  .gitignore  DIAGNOSIS_SUMMARY.md  High-Risk_Leveraged_MT5_Trading_Bot.ipynb  README.md  Trading_Analysis.ipynb  backtest.py  bot.py  manual_trade.py  quick_test.py  quick_trade_test.py  requirements.txt  simple_strategy.py  strategy.py  strategy_debug.py  test_strategies.py  test_trading.py  utils.py
forex_lstm_bot/: .env.template  requirements.txt
forex_lstm_bot/config/: config.yaml
forex_lstm_bot/src/api/: oanda_client.py
forex_lstm_bot/src/models/: lstm_predictor.py
mt5trade/: PROJECT_STATUS.md  README.md  pyproject.toml
mt5trade/mt5trade/: __init__.py  __main__.py  exceptions.py  main.py  worker.py
mt5trade/mt5trade/commands/: __init__.py  backtesting_commands.py  create_commands.py  data_commands.py  hyperopt_commands.py  list_commands.py  test_commands.py  trade_commands.py  webserver_commands.py
mt5trade/mt5trade/configuration/: __init__.py  config_validation.py  configuration.py  timerange.py
mt5trade/user_data/strategies/: SampleStrategy.py
